tests/compile_fail/unsupoted_meta_data_list.stderr
error: list meta data is not suported.
 --> $DIR/unsupoted_meta_data_list.rs:5:28
  |
5 |     #[def(field_num = 100, def_type("int32", "int32"))]
  |                            ^^^^^^^^^^^^^^^^^^^^^^^^^^
